--- a/BranchClient/BranchClient.vcxproj.filters
+++ b/BranchClient/BranchClient.vcxproj.filters
@@ -15,75 +15,75 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="addresses.h">
+    <ClInclude Include="src\addresses.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="config.h">
+    <ClInclude Include="src\BTS.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="parse.h">
+    <ClInclude Include="src\config.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Threads.h">
+    <ClInclude Include="src\disasm.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="signal.h">
+    <ClInclude Include="src\introspection.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="BTS.h">
+    <ClInclude Include="src\k32.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="introspection.h">
+    <ClInclude Include="src\kb.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="msv.h">
+    <ClInclude Include="src\msv.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="nt.h">
+    <ClInclude Include="src\nt.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="kb.h">
+    <ClInclude Include="src\parse.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="k32.h">
+    <ClInclude Include="src\signal.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="wow.h">
+    <ClInclude Include="src\Threads.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="wowcpu.h">
+    <ClInclude Include="src\wow.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="wowwin.h">
+    <ClInclude Include="src\wowcpu.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="wownt.h">
+    <ClInclude Include="src\wownt.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="wowuser.h">
+    <ClInclude Include="src\wowuser.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="disasm.h">
+    <ClInclude Include="src\wowwin.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
+    <ClCompile Include="src\Threads.cpp">
+      <Filter>Header Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\disasm.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="parse.cpp">
+    <ClCompile Include="src\Filtering.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Threads.cpp">
+    <ClCompile Include="src\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="signal.cpp">
+    <ClCompile Include="src\parse.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Filtering.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="disasm.cpp">
+    <ClCompile Include="src\signal.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
