--- a/BranchMonitor/BranchMonitor.vcxproj
+++ b/BranchMonitor/BranchMonitor.vcxproj
@@ -128,7 +128,7 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Win8 Debug|x64'">
-    <IncludePath>C:\Users\marcus\Documents\BranchMonitor\src;$(IncludePath)</IncludePath>
+    <IncludePath>C:\BranchMonitoringProject\BranchMonitor\src;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup>
     <DebuggerFlavor>DbgengKernelDebugger</DebuggerFlavor>
@@ -138,7 +138,8 @@
       <AdditionalDependencies>$(DDK_LIB_PATH)\fltmgr.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <ClCompile>
-      <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Win8 Debug|x64'">C:\Users\marcus\Documents\BranchMonitor\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Win8 Debug|x64'">%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <WarningLevel Condition="'$(Configuration)|$(Platform)'=='Win8 Debug|x64'">TurnOffAllWarnings</WarningLevel>
     </ClCompile>
     <ClCompile>
       <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Win8 Debug|Win32'">C:\Users\marcus\Documents\BranchMonitor\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
@@ -149,27 +150,27 @@
     <FilesToPackage Include="@(Inf->'%(CopyOutput)')" Condition="'@(Inf)'!=''" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\src\BTS\BTS.h" />
-    <ClInclude Include="..\src\checks\checks.h" />
-    <ClInclude Include="..\src\config.h" />
-    <ClInclude Include="..\src\dbg\debug.h" />
-    <ClInclude Include="..\src\device\device.h" />
-    <ClInclude Include="..\src\IO\IO.h" />
-    <ClInclude Include="..\src\list\list.h" />
-    <ClInclude Include="..\src\Threading\thread.h" />
+    <ClCompile Include="src\BranchMonitor.c" />
+    <ClCompile Include="src\BTS\BTS.c" />
+    <ClCompile Include="src\BTS\interrupt.c" />
+    <ClCompile Include="src\checks\apic\apic.c" />
+    <ClCompile Include="src\checks\checks.c" />
+    <ClCompile Include="src\checks\cpu\cpuid.c" />
+    <ClCompile Include="src\dbg\debug.c" />
+    <ClCompile Include="src\device\device.c" />
+    <ClCompile Include="src\IO\IO.c" />
+    <ClCompile Include="src\list\list.c" />
+    <ClCompile Include="src\Threading\thread.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\src\BranchMonitor.c" />
-    <ClCompile Include="..\src\BTS\BTS.c" />
-    <ClCompile Include="..\src\BTS\interrupt.c" />
-    <ClCompile Include="..\src\checks\apic\apic.c" />
-    <ClCompile Include="..\src\checks\checks.c" />
-    <ClCompile Include="..\src\checks\cpu\cpuid.c" />
-    <ClCompile Include="..\src\dbg\debug.c" />
-    <ClCompile Include="..\src\device\device.c" />
-    <ClCompile Include="..\src\IO\IO.c" />
-    <ClCompile Include="..\src\list\list.c" />
-    <ClCompile Include="..\src\Threading\thread.c" />
+    <ClInclude Include="src\BTS\BTS.h" />
+    <ClInclude Include="src\checks\checks.h" />
+    <ClInclude Include="src\config.h" />
+    <ClInclude Include="src\dbg\debug.h" />
+    <ClInclude Include="src\device\device.h" />
+    <ClInclude Include="src\IO\IO.h" />
+    <ClInclude Include="src\list\list.h" />
+    <ClInclude Include="src\Threading\thread.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
