BranchClient: Improvements and fixes

--- a/BranchClient/BranchClient.vcxproj.filters
+++ b/BranchClient/BranchClient.vcxproj.filters
@@ -68,9 +68,6 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\Threads.cpp">
-      <Filter>Header Files</Filter>
-    </ClCompile>
     <ClCompile Include="src\disasm.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -84,6 +81,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\signal.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Threads.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
